tests/errors/reserved-cell-name.futil
import "primitives/std.lib";
component main() -> () {
  cells {
    reg = std_reg(32);
  }
  wires {
  }
  control {
  }
}
